@startuml class-factories
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam dpi 300
left to right direction
scale 1.5

' === Strategy Factory ===
class ProblemStrategyFactory {
    + GetStrategies(problemType): IEnumerable<IProblemStrategy>
}
class StrategyRegistryBuilder {
    + RegisterAll(): Dictionary<string, List<IProblemStrategy>>
}

ProblemStrategyFactory --> StrategyRegistryBuilder

' === Test Case Factory ===
class ProblemTestCaseFactory {
    + GetTestCases(problemType): ITestCaseProvider
}
class TestCaseProviderRegistryBuilder {
    + RegisterAll(): Dictionary<string, ITestCaseProvider>
}

ProblemTestCaseFactory --> TestCaseProviderRegistryBuilder

' === Test Case Providers ===
class TwoSumTestCaseProvider implements ITestCaseProvider
class TwoSumSortedTestCaseProvider implements ITestCaseProvider
class ThreeSumTestCaseProvider implements ITestCaseProvider
class RotatedArrayTestCaseProvider implements ITestCaseProvider
class RemoveElementTestCaseProvider implements ITestCaseProvider
class RemoveDuplicatesSortedTestCaseProvider implements ITestCaseProvider
class SearchInsertPositionTestCaseProvider implements ITestCaseProvider
class MaxAvgSubArrayITestCaseProvider implements ITestCaseProvider
class MaxConsecutive1sTestCaseProvider implements ITestCaseProvider
class ContainsDuplicateITestCaseProvider implements ITestCaseProvider
class ContainsDuplicateIITestCaseProvider implements ITestCaseProvider
class LongestHarmoniousSubsequenceTestCaseProvider implements ITestCaseProvider

TestCaseProviderRegistryBuilder --> TwoSumTestCaseProvider
TestCaseProviderRegistryBuilder --> TwoSumSortedTestCaseProvider
TestCaseProviderRegistryBuilder --> ThreeSumTestCaseProvider
TestCaseProviderRegistryBuilder --> RotatedArrayTestCaseProvider
TestCaseProviderRegistryBuilder --> RemoveElementTestCaseProvider
TestCaseProviderRegistryBuilder --> RemoveDuplicatesSortedTestCaseProvider
TestCaseProviderRegistryBuilder --> SearchInsertPositionTestCaseProvider
TestCaseProviderRegistryBuilder --> MaxAvgSubArrayITestCaseProvider
TestCaseProviderRegistryBuilder --> MaxConsecutive1sTestCaseProvider
TestCaseProviderRegistryBuilder --> ContainsDuplicateITestCaseProvider
TestCaseProviderRegistryBuilder --> ContainsDuplicateIITestCaseProvider
TestCaseProviderRegistryBuilder --> LongestHarmoniousSubsequenceTestCaseProvider

@enduml